6890308: integrate zero assembler hotspot changes

Reviewed-by: never